--- a/GarLoader.MySqlUploader/GarLoader.MySqlUploader.csproj
+++ b/GarLoader.MySqlUploader/GarLoader.MySqlUploader.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="5.0.0" />
     <PackageReference Include="SqlWorker.MySql" Version="3.1.285" />
   </ItemGroup>
 
