inserting address object types to database

--- a/GarLoader.MySqlUploader/appsettings.json
+++ b/GarLoader.MySqlUploader/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "UpdaterConfiguration": {
+    "ConnectionString": "Server=127.0.0.1;Port=3306;Database=gar;Uid=gar_user;Pwd=1234"
   }
 }
